# edu-data-pipeline

./: .env.example  .gitignore  README.md  production_readiness_report.json  pyproject.toml
config/: config.yaml  r2_client.py
scripts/: build_canonical_economic.py  build_completion_report.py  build_spine.py  collect_calenviroscreen.py  collect_epa_aqs.py  collect_epa_tri.py  collect_hud_lihtc.py  collect_kidsdata_bullying.py  collect_kidsdata_child_abuse.py  collect_kidsdata_foster.py  collect_kidsdata_topic.py  collect_oi_mobility.py  collect_saipe_districts.py  collect_sf_overlays.py  pre_production_check.py  process_cdc_places.py  rebuild_kidsdata_bullying_overall.py  rebuild_master_panel.py  rebuild_master_panel_v2.py  run_5cat_pull.sh  run_pipeline.py  stub_brittle_sources.py  validate_pipeline.py  verify_credentials.py
src/collectors/: _base.py  economic.py  education.py  environment.py  health.py  housing.py  infrastructure.py  political.py  safety.py  social.py
src/joiners/: county_join.py  master_panel.py  proximity_join.py  tract_spatial_join.py
src/processors/: __main__processors.py  _base.py  economic_proc.py  environment_proc.py  generic_proc.py  housing_proc.py
src/utils/: config_loader.py  duckdb_r2.py  http_client.py  tract_aggregation.py
tests/: conftest.py  test_duckdb_synth.py  test_joiners.py  test_pipeline_logic.py  test_r2_client.py
