[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-data-pipeline"
version = "0.1.0"
description = "Open-source data pipeline for US public education research (CA-focused). R2 storage."
authors = [{name = "Vish Ratnaswamy"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "pyarrow>=14",
    "pyyaml>=6",
    "requests>=2.31",
    "boto3>=1.34",
    "duckdb>=1.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "joblib>=1.3",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "moto>=5.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
